--- a/style.css
+++ b/style.css
@@ -15,7 +15,12 @@
 
 body {
 	font-family: "Outfit", sans-serif;
-	background-color: var(--Grayish-blue);
+	background-color: var(--Light-gray);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
 }
 
 .container {
@@ -23,7 +28,7 @@ body {
 	padding: 15px;
 	border-radius: 20px;
 	width: 300px;
-	margin: 10% auto;
+	max-width: 300px;
 }
 
 .container__image {
